--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <nav class="p-4 text-white" data-aos="fade-down" data-aos-duration="800" id="navbar" >
       <div class="container mx-auto flex justify-between items-center">
         <a href="#" class="hover:text-white text-3xl font-bold tracking-tight">
-          Spectra Club</a
-        >
+          Spectra Club</a>
 
         <ul class="flex items-center font-bold space-x-7">
           <li><a href="#about" class="mx-3 hover:text-white">About Us</a></li>
@@ -48,8 +47,7 @@
               <a
                 href="#"
                 class="relative inline-flex items-center justify-center px-3 py-2 text-sm font-bold text-gray transition-all duration-200 bg-gray-900 font-pj rounded-xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900 hover:text-white"
-                role="button"
-              >
+                role="button">
                 Membership
               </a>
             </div>
